--- a/index.html
+++ b/index.html
@@ -102,7 +102,16 @@
   </div>
 
   <script>
-    $('#total-count').html($('.todo').length);
+    function updateCounters() {
+      var todoCount = $('.todo').length;
+      var completedCount = $('.completed').length;
+
+      $('#total-count').html(todoCount);
+      $('#completed-count').html(completedCount);
+      $('#todo-count').html(todoCount - completedCount);      
+    }
+
+    updateCounters();
   </script>
 </body>
 </html>
